<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>
    <CheckBox
        android:text="@string/allow_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/new_game_allow_empty" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"/>
     <CheckBox
        android:text="@string/allow_multiple"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/new_game_allow_multiple" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:text="@string/turns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_weight=".5" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/number_of_turns"
            android:ems="10"
            android:id="@+id/new_game_turns_input"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/colors"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/number_of_colors"
            android:ems="10"
            android:id="@+id/new_game_colors_input"
            android:layout_weight="1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:text="@string/holes"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight=".5" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/number_of_holes"
            android:ems="10"
            android:id="@+id/new_game_holes_input"
            android:layout_weight="1" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ToggleButton
            android:textOff="@string/ai"
            android:textOn="@string/human"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/marginRight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/new_game_computer_human"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/new_game_error_text"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />

        <Button
            android:text="@string/abort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_game_abort"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

        <Button
            android:text="@string/start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_game_start_game"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>
</LinearLayout>