<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <Button
        android:text="@string/tutorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/button_design"
        android:id="@+id/settings_tutorial" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <Button
        android:text="@string/background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/button_design"
        android:id="@+id/settings_background" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <Button
        android:text="@string/pin_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/button_design"
        android:id="@+id/settings_pin_settings" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

        <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_back"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />
    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5" />
</LinearLayout>