<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.ok.bimbomind.MainMenu"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <Button
        android:text="@string/new_game"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/main_menu_new_game"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/button_design"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <Button
        android:text="@string/load_game"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/button_design"
        android:id="@+id/main_menu_load_game" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>

    <Button
        android:text="@string/highscore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="@dimen/marginLeft"
        android:layout_marginRight="@dimen/marginRight"
        android:background="@drawable/button_design"
        android:id="@+id/main_menu_highscore" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_weight="6"
            android:layout_gravity="bottom"
            android:text="\@Copyright Bimbomind, Version 2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6" />

        <Button
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_menu_settings"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"/>
</LinearLayout>
